<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nutritional"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="codeforgood.savethechildren.NutritionalActivity1">

    <TextView
        android:text="@string/new_treatment"
        android:textSize="18pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/title_1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/total_beginning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="194dp"
        android:id="@+id/textView4"
        android:textSize="14dp"
        android:layout_below="@+id/title_1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/total_beginning_children"
        android:background="@drawable/edit_text_border"
        android:text="@string/add_number"
        android:textSize="12dp"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:hint="username"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="56dp"
        android:id="@+id/nut_1_spinner"
        android:entries="@array/nutritional1"
        android:contextClickable="false"
        android:gravity="center_horizontal|start" />

    <TextView
        android:text="@string/treatment_group_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nut_1_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/textView5" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/total_beginning_children"
        android:layout_toEndOf="@+id/total_beginning_children"
        android:layout_marginBottom="12dp"
        android:id="@+id/button3" />


</RelativeLayout>
