<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nutritional"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="codeforgood.savethechildren.NutritionalActivity1">

    <TextView
        android:text="@string/new_treatment"
        android:textSize="18pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:id="@+id/title_1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/other_box"
        android:layout_toEndOf="@+id/other_box"
        android:layout_marginBottom="12sp"
        android:id="@+id/openActivity3"
        android:onClick="openNutritional3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText3"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_number"
        android:textSize="12sp"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:layout_marginTop="12sp"
        android:layout_below="@+id/from_sc"
        android:layout_alignLeft="@+id/other_box"
        android:layout_alignStart="@+id/other_box" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText2"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_number"
        android:textSize="12sp"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:layout_marginTop="12sp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/other_box"
        android:layout_alignStart="@+id/other_box" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText4"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_number"
        android:textSize="12sp"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:layout_marginTop="11sp"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_number"
        android:textSize="12sp"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:layout_marginTop="11sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/other_box"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_number"
        android:textSize="12sp"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:inputType = "number"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="11sp" />

    <TextView
        android:text="@string/new_admissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27sp"
        android:id="@+id/textView"
        android:textSize="14sp"
        android:layout_below="@+id/title_1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/muac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17sp"
        android:id="@+id/textView2"
        android:textSize="14sp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/relapse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="14sp"
        android:layout_marginTop="16sp"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="@string/re_admission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/from_sc"
        android:textSize="14sp"
        android:layout_marginTop="35sp"
        android:layout_alignTop="@+id/editText4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/odema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="14sp"
        android:layout_below="@+id/other_box"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="20sp" />


</RelativeLayout>
