<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nutritional"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="codeforgood.savethechildren.NutritionalActivity1">

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/muac_no"
        android:layout_toEndOf="@+id/muac_no"
        android:layout_marginBottom="12sp"
        android:id="@+id/openNutritional4"
        android:onClick="openNutritional4" />

    <TextView
        android:text="@string/other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/other"
        android:textSize="14sp"
        android:layout_marginTop="64sp"
        android:layout_below="@+id/from_sc_box"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/from_sc_box"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_number"
        android:textSize="12sp"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:layout_marginTop="17sp"
        android:layout_below="@+id/from_sc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/from_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/from_sc"
        android:textSize="14sp"
        android:layout_marginTop="96sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/from_sc_box"
        android:layout_alignEnd="@+id/from_sc_box" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/muac_no"
        android:background="@drawable/edit_text_border"
        android:hint="@string/other"
        android:textSize="12sp"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:inputType = "number"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/from_sc_box"
        android:layout_alignStart="@+id/from_sc_box" />


</RelativeLayout>
